# tidal-dl-ng-For-DJ

./: .editorconfig  .pre-commit-config.yaml  AGENTS.md  Makefile  build_gui.py  errs_small.txt  mkdocs.yml  pylint_dl.txt  pylint_dl2.txt  pylint_final.txt  pylint_gui.txt  pyproject.toml  pyright_all2.txt  pyright_all3.txt  pyright_dl.txt  pyright_errs.txt  pyright_ffmpeg.txt  pyright_final.txt  pyright_gui.txt  pyright_one.txt  pyright_probe.txt  pyright_v2.txt  pyright_verbose.txt  pyrightconfig.json  tidalapi-documentation  tox.ini
bug/: report1.txt  report2.txt
hifi-api-main/: .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  requirements.txt
hifi-api-main/tests/: spammer.py  test_endpoints.py
hifi-api-main/tidal_auth/: requirements.txt  tidal_auth.py
log/: downloaded_history.json
stubs/coloredlogs/: __init__.pyi
stubs/ffmpeg/: __init__.pyi
stubs/mpegdash/: __init__.pyi  utils.pyi
stubs/mutagen/: __init__.pyi
stubs/mutagen/_vorbis/: __init__.pyi
stubs/mutagen/flac/: __init__.pyi
stubs/mutagen/id3/: __init__.pyi
stubs/mutagen/mp3/: __init__.pyi
stubs/mutagen/mp4/: __init__.pyi
stubs/tidal_dl_ng/: config.pyi
stubs/tidal_dl_ng/helper/: path.pyi
stubs/tidal_dl_ng/model/: cfg.pyi
stubs/tidal_dl_ng/ui/: dialog_history.pyi  dialog_login.pyi  dialog_settings.pyi  dialog_version.pyi
stubs/tidalapi/: __init__.pyi  album.pyi  artist.pyi  media.pyi  mix.pyi  page.pyi  playlist.pyi  request.pyi  session.pyi  user.pyi
tests/: test_gui_history.py  test_gui_initialization.py
tidal_dl_ng/: __init__.py  api.py  cache.py  cli.py  config.py  constants.py  dialog.py  dialog_history.py  download.py  gui.py  history.py  logger.py  metadata.py  runtime_trace.py  worker.py
tidal_dl_ng/gui/: __init__.py  activate.py  context_menus.py  covers.py  dialog_playlist_manager.py  downloads.py  history.py  initialization.py  main_window.py  playlist.py  playlist_membership.py  playlist_membership_mixin.py  progress.py  queue.py  search.py  signals.py  tidal_session.py  track_extras.py  trees_results.py  ui_helpers.py  updates.py
tidal_dl_ng/helper/: collection_download.py  decorator.py  decryption.py  download_protocol.py  exceptions.py  gui.py  hifi_api.py  hover_manager.py  metadata_ops.py  metadata_utils.py  mpegdash_patch.py  path.py  playlist_api.py  requests_client.py  tidal.py  tidal_auth.py  wrapper.py
tidal_dl_ng/model/: cfg.py  downloader.py  gui_data.py  meta.py
tidal_dl_ng/ui/: __init__.py  info_tab_widget.py
