[project]
name = "tidal-dl-ng-for-dj"
authors = [{ name = "Warry", email = "<warry@exemple.com>" }]
version = "0.32.1"
description = "TIDAL Media Downloader Next Generation!"
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.12,<3.14"

dependencies = [
  "requests~=2.34.2",
  "mutagen>=1.48.1",
  "dataclasses-json>=0.6.7",
  "pathvalidate>=3.3.1",
  "m3u8>=6.0.0",
  "coloredlogs>=15.0.1",
  "rich>=15.0.0",
  "toml>=0.10.2",
  "typer>=0.27.0",
  "tidalapi>=0.8.11",
  "python-ffmpeg>=2.0.12",
  "pycryptodome>=3.23.0",
  "ansi2html>=1.9.2",
  "pyside6>=6.11.1",
  "pyqtdarktheme-fork>=2.3.6",
  "httpx>=0.28.0",
]

[project.urls]
repository = "https://github.com/FunWarry/tidal-dl-ng-For-DJ"
documentation = "https://FunWarry.github.io/tidal-dl-ng-For-DJ/"

[project.scripts]
tidal-dl-ng = "tidal_dl_ng.cli:app"
tidal-dl-ng-gui = "tidal_dl_ng.gui:gui_activate"
tdn = "tidal_dl_ng.cli:app"
tdng = "tidal_dl_ng.gui:gui_activate"

[tool.poetry]
packages = [{ include = "tidal_dl_ng" }]

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
deptry = "^0.25.1"
mypy = "^2.3.0"
pre-commit = "^4.6.0"
tox = "^4.56.4"
pyupgrade = "^3.21.2"
bandit = "^1.9.4"
darglint = "^1.8.1"
isort = { extras = ["colors"], version = "^8.0.1" }
mypy-extensions = "^1.1.0"
pydocstyle = "^6.3.0"
pylint = "^4.0.6"
pillow = "^12.3.0"
pytest-cov = "^7.1.0"
black = "^26.5.1"
nuitka = "^4.1.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.6"
mkdocstrings = { extras = ["python"], version = "^1.0.6" }
griffe = "^2.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 79
fix = true
# Enable ALL rules to maximize strictness, efficiency, and performance profiling (PERF, FURB)
lint.select = ["ALL"]
# Ignoring rules that explicitly conflict with the ruff formatter
lint.ignore = [
  "COM812",
  "ISC001",
  "TD003",
  "FIX002",
  "ANN401",
  "ARG001",
  "FBT001",
  "FBT002",
  "PLR0913",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pep8-naming]
# Backward-compatible public API aliases in tidal_dl_ng/api.py retain
# their original camelCase names by design (external callers may rely
# on them). They are intentional public names, not local variables.
ignore-names = [
  "getNum",
  "getItem",
  "isItemValid",
  "getItems",
  "getLimitIndexs",
  "getVersion",
  # Qt framework method overrides must keep camelCase names.
  "sizeHint",
  "updateGeometries",
  "lessThan",
  "filterAcceptsRow",
  # Project exception names intentionally omit the "Error" suffix to
  # match their domain meaning (MediaUnknown, MediaMissing, etc.).
  "MediaUnknown",
  "UnknownManifestFormat",
  "MediaMissing",
]

[tool.black]
# https://github.com/psf/black
target-version = ["py312", "py313"]
line-length = 79
color = true
preview = true

exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
    | site
    | docs
    | tidal_dl_ng/ui/main.py
    | tidal_dl_ng/ui/dialog_version.py
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 312
line_length = 79
known_typing = [
  "typing",
  "types",
  "typing_extensions",
  "mypy",
  "mypy_extensions",
]
sections = [
  "FUTURE",
  "TYPING",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER",
]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true
known_third_party = [
  "Crypto",
  "PySide6",
  "coloredlogs",
  "dataclasses_json",
  "ffmpeg",
  "m3u8",
  "mutagen",
  "pathvalidate",
  "requests",
  "rich",
  "tidalapi",
  "toml",
  "typer",
]

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
files = ["tidal_dl_ng"]
mypy_path = "stubs"
python_version = "3.12"
pretty = true
show_traceback = true
color_output = true
strict = true
allow_redefinition = false
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_subclassing_any = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = false
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = true

[tool.deptry]
# shiboken6 is a transitive dependency from PySide6 that we intentionally use directly
# for type checking and widget deletion (Shiboken.isValid, Shiboken.delete)
extend_exclude = []
# Deptry v0.23+: use per_rule_ignores instead of the deprecated ignore_transitive
per_rule_ignores = { DEP003 = ["shiboken6"] }

[tool.pylint]
# Match project line-length standard
max-line-length = 79
# Design-level rules disabled project-wide where the pattern is
# intentional and API-stable (e.g. format functions with many
# parameters for template substitution, unused *args/**kwargs for
# callable compatibility, broad Exception with logger.exception).
disable = [
  "too-many-arguments",
  "too-many-positional-arguments",
  "too-many-locals",
  "too-many-boolean-expressions",
  "broad-exception-caught",
  "unused-argument",
  "keyword-arg-before-vararg",
  # Mixin classes (CollectionDownloadMixin, MetadataWriterMixin) inherit
  # from DownloadProtocol but intentionally leave its abstract methods
  # unimplemented; the concrete Download class supplies them. This is a
  # deliberate mixin pattern, not a missing implementation.
  "abstract-method",
  # Ignore missing docstrings in stub files (.pyi)
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
]
# Qt framework method overrides (sizeHint, updateGeometries, lessThan,
# PySide6 ships as a C extension; allow pylint to introspect its members
# instead of emitting c-extension-no-member (I1101) false positives.
extension-pkg-allow-list = ["PySide6", "shiboken6"]
# PySide6 signal instances (SignalInstance) expose connect/disconnect/
# emit at the C level; pylint cannot infer them from the extension, so
# declare them as generated members to avoid false no-member (E1101).
generated-members = [".*\\.connect", ".*\\.disconnect", ".*\\.emit"]
# Enable extra strict extensions for performance and efficiency
load-plugins = [
  "pylint.extensions.bad_builtin",
  "pylint.extensions.check_elif",
  "pylint.extensions.code_style",
  "pylint.extensions.empty_comment",
  "pylint.extensions.for_any_all",
  "pylint.extensions.mccabe",
  "pylint.extensions.overlapping_exceptions",
  "pylint.extensions.private_import",
  "pylint.extensions.set_membership",
  "pylint.extensions.typing",
]
# TypeVars use a T-prefixed CamelCase name (e.g. TConfigData).
good-names = ["TConfigData", "_", "T"]
# Backward-compatible public API aliases in tidal_dl_ng/api.py retain
# their original camelCase names by design (external callers may rely
# on them). They are intentional public names, not local variables.
good-names-rgxs = [
  "^getNum$",
  "^getItem$",
  "^isItemValid$",
  "^getItems$",
  "^getLimitIndexs$",
  "^getVersion$",
  # Qt framework method overrides must keep camelCase names.
  "^sizeHint$",
  "^updateGeometries$",
  "^lessThan$",
  "^filterAcceptsRow$",
]

# Data-model dataclasses (e.g. ResultItem, ItemRequest, Settings,
# HelpSettings) legitimately carry many attributes; raise the threshold
# for the whole project.
[tool.pylint.design]
max-attributes = 50
# MainWindow is the intentional composition root for focused GUI mixins.
# Count inherited feature mixins without flagging that architecture itself.
max-parents = 20
